--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <script src='./js-basic/2.数字添加括号.js'></script>
+    <script src='./js-basic/3.16进制颜色值转 RGB 值.js'></script>
 </body>
 
 </html>
