feat: curry func

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 
 </head>
 <body>
-    <script src='./js-basic/3.16进制颜色值转 RGB 值.js'></script>
+    <ul id='list'>
+  <li data-name="Jerry" class="item"><span>1</span></li>
+  <li data-name="Lucy" class="item"><span>2</span></li>
+  <li data-name="Tomy"><span>3</span></li>
+</ul>
+
+
+    <script src='./js-basic/6.compose函数.js'></script>
 </body>
 
 </html>
